--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <script src="./script.js"></script>
   </head>
   <body>
-    <img src="./hero-bg.jpg" alt="" class="x" />
+    <img src="./assets/hero-bg.jpg" alt="" class="x" />
     <header>
-      <a href="#"> <img src="./ineuron-logo-white.png" alt="" /></a>
+      <a href="#"> <img src="./assets/ineuron-logo-white.png" alt="" /></a>
 
       <ul class="nav">
         <li>Course</li>
@@ -43,7 +43,7 @@
 
         <button class="btn">Learn Now</button>
       </div>
-      <img src="./Screenshot 2022-06-26 034242.png" alt="" />
+      <img src="./assets/Screenshot 2022-06-26 034242.png" alt="" />
     </main>
 
     <button class="chat-btn" onclick="onClick(this)">
