--- a/index.html
+++ b/index.html
@@ -12,90 +12,15 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.js"
+      integrity="sha512-uplugzeh2/XrRr7RgSloGLHjFV0b4FqUtbT5t9Sa/XcilDr1M3+88u/c+mw6+HepH7M2C5EVmahySsyilVHI/A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="./script.js"></script>
   </head>
   <body>
-    <img src="./assets/hero-bg.jpg" alt="" class="x" />
-    <header>
-      <a href="#"> <img src="./assets/ineuron-logo-white.png" alt="" /></a>
-
-      <ul class="nav">
-        <li>Course</li>
-        <li>One Neuron</li>
-        <li>Product</li>
-        <li>Company</li>
-      </ul>
-
-      <div>
-        <button class="btn" style="background: #5c5998">sign up</button>
-        <button class="btn">login</button>
-      </div>
-    </header>
-
-    <main>
-      <div>
-        <h1>Building learning communities</h1>
-        <h3>With Our Affordable & Competent Courses</h3>
-        <p>
-          Lifetime access to 400+ courses in all technologies under one
-          subscription.
-        </p>
-
-        <button class="btn">Learn Now</button>
-      </div>
-      <img src="./assets/Screenshot 2022-06-26 034242.png" alt="" />
-    </main>
-
-    <button class="chat-btn" onclick="onClick(this)">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 800 800"
-        height="32px"
-        width="32px"
-        role="img"
-        alt="Chat icon"
-        class="tawk-min-chat-icon"
-      >
-        <path
-          fill="white"
-          d="M400 26.2c-193.3 0-350 156.7-350 350 0 136.2 77.9 254.3 191.5 312.1 15.4 8.1 31.4 15.1 48.1 20.8l-16.5 63.5c-2 7.8 5.4 14.7 13 12.1l229.8-77.6c14.6-5.3 28.8-11.6 42.4-18.7C672 630.6 750 512.5 750 376.2c0-193.3-156.7-350-350-350zm211.1 510.7c-10.8 26.5-41.9 77.2-121.5 77.2-79.9 0-110.9-51-121.6-77.4-2.8-6.8 5-13.4 13.8-11.8 76.2 13.7 147.7 13 215.3.3 8.9-1.8 16.8 4.8 14 11.7z"
-        ></path>
-      </svg>
-    </button>
-
-    <div class="bot-container">
-      <div class="bot-header">
-        <svg
-          height="32px"
-          style="enable-background: new 0 0 512 512"
-          viewBox="0 0 512 512"
-          width="32px"
-          onclick="closeChat()"
-        >
-          <polygon
-            fill="white"
-            points="352,128.4 319.7,96 160,256 160,256 160,256 319.7,416 352,383.6 224.7,256 "
-          />
-        </svg>
-        <h3>iNeuron Assistant</h3>
-      </div>
-
-      <div class="bot-content"></div>
-
-      <div class="input-box">
-        <textarea
-          name="chat"
-          id="chat"
-          cols="30"
-          rows="3"
-          placeholder="Type Here"
-        ></textarea>
-        <button
-          onclick="addMessage('Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam molestias aut fuga enim modi sed adipisci facilis quaerat maiores doloribus. Excepturi neque eveniet voluptates ipsam aspernatur. Quam animi libero aperiam.', 'reply')"
-        >
-          SEND
-        </button>
-      </div>
-    </div>
+    
   </body>
 </html>
