Js issue resolved

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>!!!!Affordable & Component Course</title>
+    <title>Affordable & Component Course</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -96,9 +96,7 @@
           rows="3"
           placeholder="Type Here"
         ></textarea>
-        <button
-          onclick="addMessage('Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam molestias aut fuga enim modi sed adipisci facilis quaerat maiores doloribus. Excepturi neque eveniet voluptates ipsam aspernatur. Quam animi libero aperiam.', 'reply')"
-        >
+        <button onclick="addMessage(document.getElementById('chat').value)">
           SEND
         </button>
       </div>
